proof/hostile-audit/20260310T170224-0500/phase-4/acropolis-with-metrics-check.txt
    Blocking waiting for file lock on package cache
    Updating crates.io index
    Blocking waiting for file lock on package cache
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
    Checking bytes v1.11.1
    Checking slab v0.4.11
    Checking tracing-core v0.1.36
   Compiling jobserver v0.1.33
    Checking hashbrown v0.15.4
   Compiling fs_extra v1.3.0
   Compiling aws-lc-rs v1.13.3
    Checking zeroize v1.8.1
    Checking atomic-waker v1.1.2
   Compiling getrandom v0.2.16
    Checking futures-util v0.3.31
   Compiling time-core v0.1.8
   Compiling cc v1.2.31
    Checking rustls-pki-types v1.12.0
   Compiling num-conv v0.2.0
    Checking deranged v0.5.8
    Checking tracing v0.1.44
   Compiling const-random-macro v0.1.16
    Checking tokio v1.47.1
    Checking http v1.3.1
   Compiling time-macros v0.2.27
    Checking http v0.2.12
    Checking indexmap v2.10.0
   Compiling rustls v0.23.31
    Checking regex-automata v0.4.9
    Checking const-random v0.1.18
    Checking rustls-native-certs v0.8.1
    Checking dlv-list v0.5.2
    Checking metrics v0.23.1
    Checking ordered-multimap v0.7.3
    Checking http-body v1.0.1
    Checking tungstenite v0.24.0
   Compiling cmake v0.1.54
    Checking http-body v0.4.6
   Compiling prometheus v0.14.0
    Checking http-body-util v0.1.3
    Checking sketches-ddsketch v0.2.2
    Checking foldhash v0.2.0
    Checking rust-ini v0.20.0
    Checking tracing-log v0.2.0
    Checking nu-ansi-term v0.50.3
    Checking hashbrown v0.16.1
    Checking tower v0.4.13
    Checking time v0.3.47
   Compiling aws-lc-sys v0.30.0
   Compiling openssl-sys v0.9.109
   Compiling ring v0.17.14
   Compiling blake3 v1.8.2
    Checking lru v0.16.3
   Compiling openssl v0.10.73
   Compiling native-tls v0.2.14
    Checking axum-core v0.4.5
    Checking futures-executor v0.3.31
    Checking multer v3.1.0
    Checking futures v0.3.31
    Checking bitflags v2.9.1
    Checking serde_json v1.0.142
    Checking serde_urlencoded v0.7.1
    Checking serde_spanned v0.6.9
    Checking toml_datetime v0.6.11
    Checking raw-cpuid v11.5.0
    Checking serde_path_to_error v0.1.17
    Checking rustix v1.0.8
    Checking ron v0.8.1
    Checking cookie v0.18.1
    Checking toml_edit v0.22.27
    Checking simple_asn1 v0.6.3
    Checking matchers v0.2.0
    Checking tracing-serde v0.2.0
    Checking json5 v0.4.1
    Checking tracing-subscriber v0.3.22
    Checking regex v1.11.1
    Checking bincode v1.3.3
    Checking chrono v0.4.41
    Checking uuid v1.17.0
    Checking quanta v0.12.6
    Checking tokio-util v0.7.15
    Checking tower v0.5.2
    Checking tokio-tungstenite v0.24.0
    Checking metrics-util v0.17.0
    Checking async-compression v0.4.27
    Checking tempfile v3.20.0
    Checking governor v0.6.3
    Checking h2 v0.4.11
    Checking h2 v0.3.27
    Checking tower-http v0.5.2
    Checking toml v0.8.23
    Checking config v0.14.1
    Checking tokio-native-tls v0.3.1
    Checking jsonwebtoken v9.3.1
    Checking hyper v1.6.0
    Checking hyper v0.14.32
    Checking hyper-util v0.1.16
    Checking axum v0.7.9
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.27
    Checking axum-extra v0.9.6
    Checking rustls-webpki v0.103.4
    Checking tokio-rustls v0.26.2
    Checking hyper-rustls v0.27.7
    Checking metrics-exporter-prometheus v0.15.3
    Checking adaptive_expert_platform v0.1.0 (/home/donovan/Projects/ReliantAI/Acropolis/adaptive_expert_platform)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hyper`
   --> adaptive_expert_platform/src/monitoring.rs:471:13
    |
471 |         use hyper::service::{make_service_fn, service_fn};
    |             ^^^^^ use of unresolved module or unlinked crate `hyper`
    |
    = help: if you wanted to use a crate named `hyper`, use `cargo add hyper` to add it to your `Cargo.toml`

error[E0432]: unresolved import `hyper`
   --> adaptive_expert_platform/src/monitoring.rs:470:13
    |
470 |         use hyper::{Body, Request, Response, Server};
    |             ^^^^^ use of unresolved module or unlinked crate `hyper`
    |
    = help: if you wanted to use a crate named `hyper`, use `cargo add hyper` to add it to your `Cargo.toml`

error: cannot find macro `error` in this scope
   --> adaptive_expert_platform/src/monitoring.rs:511:17
    |
511 |                 error!("Prometheus metrics server error: {}", e);
    |                 ^^^^^
    |
    = note: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
    = note: macro `crate::plugin::hot_reload::error` exists but is inaccessible
help: consider importing this macro
    |
  3 + use tracing::error;
    |

warning: unused imports: `Counter`, `Gauge`, `Histogram`, and `Opts`
  --> adaptive_expert_platform/src/monitoring.rs:15:28
   |
15 |     prometheus::{Registry, Counter, Histogram, Gauge, Opts},
   |                            ^^^^^^^  ^^^^^^^^^  ^^^^^  ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
warning: `adaptive_expert_platform` (lib) generated 1 warning
error: could not compile `adaptive_expert_platform` (lib) due to 3 previous errors; 1 warning emitted
